fix: added navbar toggling for hamburger bar and fixed alignment for mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,3 +84,14 @@ body {
   text-align: center;
   font-size: 14px;
 }
+
+.navbar-hidden {
+  display: none;
+}
+
+@media only screen and (max-width: 600px) {
+  .buttons {
+    align-items: flex-start;    
+    flex-direction: column;
+  }
+}
